rm unused variable, better backgrounds

--- a/src/assets/scss/config/_as-app-settings.scss
+++ b/src/assets/scss/config/_as-app-settings.scss
@@ -577,8 +577,7 @@ $topbar-input-width: 200px;
 
 $global-letter-spacing: 0.5px;
 $secondary-login-option-color: #526991;
-$sp-support-bg: rgba($ucla-neutral, .85);
-$sp-support-bg-fallback: #e4eef4;
+$sp-support-bg: $light-gray;
 $footer-link-color: $white;
 $footer-link-color-hover: $ucla-yellow;
-$html-background: $dark-gray;
+$html-background: $medium-gray;
