--- a/src/assets/scss/config/_med-settings.scss
+++ b/src/assets/scss/config/_med-settings.scss
@@ -577,8 +577,7 @@ $topbar-input-width: 200px;
 
 $global-letter-spacing: 0.5px;
 $secondary-login-option-color: #526991;
-$sp-support-bg: rgba($ucla-neutral, .85);
-$sp-support-bg-fallback: #e4eef4;
+$sp-support-bg: rgba($light-gray, .85);
 $footer-link-color: $white;
 $footer-link-color-hover: $ucla-health-gold;
-$html-background: $ucla-blue-old-dark;
+$html-background: #3e83c2;
