--- a/src/assets/scss/components/_login-form.scss
+++ b/src/assets/scss/components/_login-form.scss
@@ -18,7 +18,7 @@
 
 #sso .error-box {
 	width: 100%;
-	@include breakpoint(grid-liquid) {
+	@include breakpoint(large-type) {
 		width: 26rem;
 	}
 	h2 {
