--- a/src/partials/as-app-footer.html
+++ b/src/partials/as-app-footer.html
@@ -1,6 +1,6 @@
 <footer role="contentinfo" class="ucla-iam-footer">
 	<div class="ucla-iam-footer-content">
-		<p><a href="{{root}}/ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span></p>
+		<p><a href="{{root}}/ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a></p>
 	</div>
 </footer>
 
