pathing for assets on default nav page

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,4 +1,4 @@
-{{> ucla-head }}
+{{> default-head }}
 
 	<header class="logo" role="banner"><img src="{{root}}assets/img/ucla-white.png" alt="UCLA"></header>
 
