--- a/src/partials/health-sso-form-secondary.html
+++ b/src/partials/health-sso-form-secondary.html
@@ -16,9 +16,9 @@
 
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
 
-	<ul class="sso-links">
-		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php">UCLA Logon ID</a> or Password?</a></li>
-		<li><a href="#" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
+  <ul class="sso-links">
+		<li>Forgot your <a href="https://my.uclahealth.org/MyChart/recoverlogin.asp" title="Lookup your Medcenter ID">Medcenter ID</a> or <a href="https://my.uclahealth.org/MyChart/passwordreset.asp" title="Reset your password">Password</a>?</li>
+		<li><a href="https://my.uclahealth.org/MyChart/digidaccesscheck.asp" title="Create a Medcenter ID">Need a Medcenter ID?</a></li>
 	</ul>
 
   <aside class="secondary-login">
