--- a/src/partials/health-sso-form-fail.html
+++ b/src/partials/health-sso-form-fail.html
@@ -2,10 +2,10 @@
     
   <legend>Sign In with your Medcenter ID</legend>
     
-  <div class="error-box-solid">
-    <h2>Your ID and/or password were incorrect.</h2>
+  <div>
+    <h2 class="error-title">Your ID and/or password were incorrect.</h2>
     
-    <p>Make sure you're signing in with the right account ID, and carefully retype your password. If you still have problems, try <a href="#">resetting your password or looking up your Logon ID</a>.</p>
+    <p class="error-title">Make sure you're signing in with the right account ID, and carefully retype your password. If you still have problems, try <a href="#">resetting your password or looking up your Medcenter ID</a>.</p>
   </div>
   
   <fieldset>
@@ -22,9 +22,9 @@
   
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
   
-	<ul class="sso-links">
-		<li><a href="#" title="Reset your password or lookup your Logon ID">Forgot your UCLA Logon ID or Password?</a></li>
-		<li><a href="#" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
+  <ul class="sso-links">
+		<li>Forgot your <a href="https://my.uclahealth.org/MyChart/recoverlogin.asp" title="Lookup your Medcenter ID">Medcenter ID</a> or <a href="https://my.uclahealth.org/MyChart/passwordreset.asp" title="Reset your password">Password</a>?</li>
+		<li><a href="https://my.uclahealth.org/MyChart/digidaccesscheck.asp" title="Create a Medcenter ID">Need a Medcenter ID?</a></li>
 	</ul>
   
 </form>
