--- a/src/partials/health-sso-form.html
+++ b/src/partials/health-sso-form.html
@@ -15,10 +15,11 @@
 	</fieldset>
   
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
-  
-	<ul class="sso-links">
-		<li><a href="#" title="Reset your password or lookup your Logon ID">Forgot your UCLA Logon ID or Password?</a></li>
-		<li><a href="#" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
+	
+  <ul class="sso-links">
+		<li>Forgot your <a href="https://my.uclahealth.org/MyChart/recoverlogin.asp" title="Lookup your Medcenter ID">Medcenter ID</a> or <a href="https://my.uclahealth.org/MyChart/passwordreset.asp" title="Reset your password">Password</a>?</li>
+		<li><a href="https://my.uclahealth.org/MyChart/digidaccesscheck.asp" title="Create a Medcenter ID">Need a Medcenter ID?</a></li>
 	</ul>
+
   
 </form>
