--- a/src/partials/health-sso-form.html
+++ b/src/partials/health-sso-form.html
@@ -9,8 +9,8 @@
 		</label>
 
 		<label for="pass"><span hidden>Your Mednet/AD Password</span>
-		  <input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}"  title="Passwords are at least 8 characters long and must have 3 of the following: Number (0-9), Lower Case letter(a-z), Upper Case letter(A-Z), and/or Special Characters. They cannot be a recently used password and cannot contain any part of your name or ID." tabindex="2" autocorrect="off" autocapitalize="none" required>
-		<span class="form-error">Passwords are at least 8 characters long and can consist of letters, numbers, and the following symbols: !@#$%^&*().,</span>
+		  <input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}"  title="Passwords are at least 8 characters long and must have 3 of the following: Numbers (0-9), Lower Case Letters (a-z), Upper Case Letters (A-Z), and/or Special Characters." tabindex="2" autocorrect="off" autocapitalize="none" required>
+		<span class="form-error">Passwords are at least 8 characters long and must have 3 of the following: Numbers (0-9), Lower Case Letters (a-z), Upper Case Letters (A-Z), and/or Special Characters.</span>
 		</label>
 	</fieldset>
   
