fix breakpoint issue

--- a/src/assets/scss/components/_supporting-content.scss
+++ b/src/assets/scss/components/_supporting-content.scss
@@ -23,6 +23,9 @@
 
 .health-logo {
   background: $white;
+  @include breakpoint(multi-column) {
+    background: none;
+  }
 	img {
   	display: block;
   	width: 35%;
