--- a/src/partials/health-sso-form-fail.html
+++ b/src/partials/health-sso-form-fail.html
@@ -1,6 +1,6 @@
 <form id="sso" role="form" action="/" method="post" data-abide novalidate>
     
-  <legend>Sign In with Mednet/AD</legend>
+  <legend>Sign In with Mednet AD</legend>
     
   <div>
     <h2 class="error-title">Your ID and/or password were incorrect.</h2>
