--- a/src/partials/health-sso-form.html
+++ b/src/partials/health-sso-form.html
@@ -1,6 +1,6 @@
 <form id="sso" role="form" action="/" method="post" data-abide novalidate>
     
-  <legend>Sign In with Mednet/AD</legend>
+  <legend>Sign In with Mednet AD</legend>
 
   <fieldset>
 		<label for="logon"><span hidden>Your Mednet/AD Account ID</span>
