update styling & include new logo

--- a/src/layouts/medcenter.html
+++ b/src/layouts/medcenter.html
@@ -1,6 +1,6 @@
 {{> health-head }}
 
-  <header class="logo health-logo" role="banner"><img src="{{root}}assets/img/health.png" alt="UCLA Health"></header>
+  <header class="logo health-logo" role="banner"><img src="{{root}}assets/img/dgsom_uclahealth.png" alt="UCLA Health"></header>
 
 	<section class="content" role="main">
 			{{> body}}
