update prototype modernizr location

--- a/src/partials/health-head.html
+++ b/src/partials/health-head.html
@@ -7,7 +7,7 @@
 	<title>UCLA Single Sign-On</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{root}}/assets/css/medcenter.css">
-	<script src="{{root}}/assets/js/modernizr.custom.js"></script>
+	<script src="{{root}}/assets/directlinked/modernizr.custom.js"></script>
 </head>
 
 <body>
