fix legend element being out of hierarchy

--- a/src/partials/health-sso-form-fail.html
+++ b/src/partials/health-sso-form-fail.html
@@ -1,6 +1,6 @@
 <form id="sso" role="form" action="/" method="post" data-abide novalidate>
     
-  <legend>Sign In with Mednet ID</legend>
+  <h1>Sign In with Mednet ID</h1>
     
   <div>
     <h2 class="error-title">Your ID and/or password were incorrect.</h2>
