--- a/src/partials/ucla-sso-form-fail.html
+++ b/src/partials/ucla-sso-form-fail.html
@@ -1,6 +1,6 @@
 <form id="sso" role="form" action="/" method="post" data-abide novalidate>
 	
-	<legend>Sign In with your UCLA Logon ID</legend>
+	<h1>Sign In with your UCLA Logon ID</h1>
 		
 	<div class="error-box-lite login-fail">
 		<h3>Your ID and/or password were incorrect.</h3>
